--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Torin",
+  "author": "Torin Stephen",
   "license": "ISC",
   "dependencies": {
     "child_process": "^1.0.2",
